# msg-parser-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
data/: .gitignore  Thumbs.db  attachment.msg  sample.ppt  test_email.msg  test_email_1.msg  test_email_2.msg  test_email_3.msg  test_email_4.msg
examples/: parse-email.rs
src/: lib.rs
src/ole/: constants.rs  entry.rs  error.rs  header.rs  iterator.rs  mod.rs  ole.rs  sat.rs  sector.rs  util.rs
src/parser/: constants.rs  decode.rs  error.rs  mod.rs  named_prop.rs  outlook.rs  rtf.rs  storage.rs  stream.rs
